<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable name="generatorForm" type="com.arkada38.passwordgeneratorkeyword.GeneratorViewModel"/>
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/serviceName"
                android:inputType="text"
                android:hint="@string/service_name"
                android:maxLines="1"
                android:text="@={generatorForm.serviceName}" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/keyword"
                android:hint="@string/keyword"
                android:maxLines="1"
                android:text="@={generatorForm.keyword}" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:text="@string/length_of_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_weight="1"
                android:textSize="18sp" />

            <TextView
                android:text="@={`` + generatorForm.passwordLength}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textAlignment="center" />
        </LinearLayout>

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar"
            android:max="24"
            android:progress="@={generatorForm.passwordLength - 8}"/>

        <TextView
            android:text="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="18sp"
            android:padding="5dp" />

        <TextView
            android:text="@={generatorForm.password}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textAlignment="center"
            android:textSize="24sp"
            android:id="@+id/passwordTv"
            android:background="@android:color/background_dark"
            android:textColor="@android:color/background_light" />

        <CheckBox
            android:text="@string/use_special_symbols"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/useSpecialSymbols"
            android:checked="@={generatorForm.useSpecialSymbols}" />

        <Button
            android:text="@string/copy_to_clipboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="copyToClipboard" />
    </LinearLayout>
</layout>